Fixed Bug 60281 - [A11y][DEQUE:230527] Calendar - Mini Calendar - Focus indicator not clearly visible

--- a/ui/apps/io.ox/backbone/views/datepicker.less
+++ b/ui/apps/io.ox/backbone/views/datepicker.less
@@ -149,6 +149,14 @@
         padding: 8px;
         z-index: 9;
 
+        &:focus {
+            border-color: #66afe9;
+            z-index: 10;
+            outline: 0;
+            -webkit-box-shadow: 0px 0px 8px 2px rgba(102,175,233,.6);
+            box-shadow: 0px 0px 8px 2px rgba(102,175,233,.6);
+        }
+
         .navigation {
             margin: 3px 0 13px 0;
         }
